# high_low_on_zillow

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.streamlit/: config.toml
configs/: data_sources.yaml  settings.yaml
data/processed/: bay_area_affordability.parquet  bay_area_affordability_kpis.parquet  bay_area_home_price_kpis.parquet  bay_area_home_prices.parquet  bay_area_inventory_kpis.parquet  bay_area_inventory_metro.parquet  bay_area_rent_kpis.parquet  bay_area_rentals.parquet  bay_area_sales_kpis.parquet  bay_area_sales_metro.parquet
scripts/: build_bay_area_dataset.py  build_kpi_tables.py  download_county_geojson.py  download_zillow_data.py  run_app.sh  validate_data.py
src/high_low_on_zillow/: config.py  paths.py
src/high_low_on_zillow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/high_low_on_zillow/geo/: county_geo.py
src/high_low_on_zillow/ingestion/: downloader.py  manifest.py
src/high_low_on_zillow/metrics/: kpis.py
src/high_low_on_zillow/processing/: affordability.py  zillow_processor.py
src/high_low_on_zillow/utils/: data_access.py
tests/: test_config.py  test_county_geo.py  test_imports.py  test_processed_data.py
